<resources>
    <string name="app_name">Minitel Toolbox Lite</string>
    <string name="hello_blank_fragment">TODO Blank fragment</string>
    <string name="username_hint">firstname.lastname</string>
    <string name="username_label">Username</string>
    <string name="password_hint">********</string>
    <string name="password_label">Password</string>
    <string name="login">Login</string>
    <string name="event_time_format">%1$s - %2$s</string>
    <string name="calendar">Calendar</string>
    <string name="channel_id">ics_event</string>
    <string name="channel_description">Receive agenda notification</string>
    <string name="channel_name">Agenda</string>
    <string name="remember_me">Remember me</string>
    <string name="agenda_empty">Your agenda is empty</string>
    <string name="emse_portal_status">EMSE Portal status</string>
    <string name="agenda_status">Agenda status</string>
    <string name="agenda_url_label">Agenda URL</string>
    <string name="saved">✔️</string>
    <string name="not_saved">❌</string>
    <string name="signed_in">✔️</string>
    <string name="signed_out">❌</string>
    <string name="notification_title">Go to %1$s! (%2$s - %3$s)</string>
    <string name="settings">Settings</string>
    <string name="notify_me_of_events_before_x_minutes">Notify me of events before</string>
    <string name="early_settings_icon_content_description">Notify before icon</string>
    <string name="early_minutes_settings_slider_content_description">Slider to define when the notification appears</string>
    <string name="licences_settings_content_description">Licences icon</string>
    <string name="licences">Licences</string>
    <string name="mit_licence">MIT Licence</string>
    <string name="about">About</string>
    <string name="about_icon_content_description">About icon</string>
    <string name="repository_url">https://github.com/Darkness4/minitel-toolbox-lite</string>
</resources>
