<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.minitel.toolboxlite.presentation.viewmodels.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:minHeight="?attr/minTouchTargetSize"
        android:onClick="@{() -> viewModel.doOpenLicences()}">

        <ImageView
            android:id="@+id/imageView_licencesSettings_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/licences_settings_content_description"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_gavel_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_licencesSettings_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingEnd="16dp"
            android:text="@string/licences"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintBottom_toTopOf="@+id/textView_licencesSettings_summary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView_licencesSettings_icon"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView_licencesSettings_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:paddingEnd="16dp"
            android:text="@string/mit_licence"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView_licencesSettings_icon"
            app:layout_constraintTop_toBottomOf="@+id/textView_licencesSettings_title"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
