<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.minitel.toolboxlite.presentation.viewmodels.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:minHeight="88dp">

        <ImageView
            android:id="@+id/imageView_earlyMinutesSettings_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/early_settings_icon_content_description"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_timer_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_earlyMinutesSettings_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingEnd="16dp"
            android:text="@string/notify_me_of_events_before_x_minutes"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintBottom_toTopOf="@+id/textView_earlyMinutesSettings_summary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView_earlyMinutesSettings_icon"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView_earlyMinutesSettings_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingEnd="16dp"
            android:text="@{Long.toString(viewModel.calendarSettings.earlyMinutes) + ` minutes`}"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toTopOf="@+id/textView_earlyMinutesSettings_slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView_earlyMinutesSettings_icon"
            app:layout_constraintTop_toBottomOf="@+id/textView_earlyMinutesSettings_title"
            tools:ignore="RtlSymmetry"
            tools:text="x minutes" />

        <com.google.android.material.slider.Slider
            android:id="@+id/textView_earlyMinutesSettings_slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/early_minutes_settings_slider_content_description"
            android:paddingEnd="16dp"
            android:stepSize="1"
            android:value="@={viewModel.earlyMinutes}"
            android:valueFrom="0"
            android:valueTo="60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_earlyMinutesSettings_icon"
            app:layout_constraintTop_toBottomOf="@+id/imageView_earlyMinutesSettings_icon"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
