<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.minitel.toolboxlite.presentation.viewmodels.LoginViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="32dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/textView_emse_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:labelFor="@id/textView_emse_status"
                android:text="@string/emse_portal_status"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_emse_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@{viewModel.isEmseLoggedIn() ? @string/signed_in : @string/signed_out}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toBottomOf="@+id/textView_emse_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView_emse_label"
                tools:text="Signed In" />

            <TextView
                android:id="@+id/textView_ics_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:labelFor="@id/textView_ics_label"
                android:text="@string/agenda_status"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_emse_label" />

            <TextView
                android:id="@+id/textView_ics_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@{viewModel.isIcsSaved() ? @string/saved : @string/not_saved}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toBottomOf="@+id/textView_ics_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView_ics_label"
                tools:text="Saved" />

            <TextView
                android:id="@+id/textView_agendaUrl_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:labelFor="@id/textView_agendaUrl_value"
                android:text="@string/agenda_url_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_ics_label" />

            <TextView
                android:id="@+id/textView_agendaUrl_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:text="@{viewModel.icsUrl}"
                android:textAlignment="viewEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView_agendaUrl_label"
                app:layout_constraintTop_toTopOf="@+id/textView_agendaUrl_label"
                tools:text="https://stuff.com" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>
